--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "prerender-node": "^2.0.0",
     "rc": "~0.5.0",
+    "request": "^2.58.0",
+    "require": "^2.4.20",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0"
   },
